[tool.poetry]
name = "meme-generator-ui"
version = "0.0.2"
description = ""
authors = ["filwaline <skywalker950925@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
meme-generator = "*"
pyyaml = "^6.0.1"
typer = "^0.9.0"
gradio = "4.15"


[tool.poetry.scripts]
meme-from-yaml = "meme_generator_ui.create_memes_from_yaml:main"
meme-web-ui = "meme_generator_ui.webui:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
